--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "node",
+            "request": "attach",
+            "name": "Attach",
+            "port": 9229,
+            "restart": true
+        },
+        {
+            "type": "node",
             "request": "launch",
             "name": "Launch API request",
             "program": "${workspaceFolder}/nodeHomework/APIs/app.js"
