--- a/nodeHomework/yelpCamp/package.json
+++ b/nodeHomework/yelpCamp/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "nodemon --inspect app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +13,12 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "method-override": "^3.0.0",
     "mongoose": "^5.2.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "request": "^2.87.0"
   }
 }
