--- a/nodeHomework/DeployDemo/package.json
+++ b/nodeHomework/DeployDemo/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.3"
+  },
+  "engines": {
+    "node": "8.9.3",
+    "npm": "5.5.1"
   }
 }
